--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body class="body">
     <!-- Header section      -->
     <header class="header">
-      <nav class="header-nav">
+     <div class="header-div container"> <nav class="header-nav">
         <!-- Logo -->
         <a href="./index.html" class="logo link"
           >Web <span class="header-span-logo">Studio</span></a
@@ -50,6 +50,7 @@
           </li>
         </ul>
       </address>
+    </div> 
     </header>
 
     <!-- Main    -->
