--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
   <body class="body">
     <!-- Header section      -->
     <header class="header">
-     <div class="header-div container"> <nav class="header-nav">
+     <div class="header-div container"> 
+      <nav class="header-nav">
         <!-- Logo -->
         <a href="./index.html" class="logo link"
           >Web <span class="header-span-logo">Studio</span></a
@@ -37,7 +38,7 @@
       </nav>
 
       <address class="address" style="font-style: normal">
-        <ul class="list">
+        <ul class="list-contacts list">
           <li>
             <a href="mailto:info@devstudio.com" class="info link"
               >info@devstudio.com</a
