--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
           <!--Menu Nav -->
           <ul class="header-nav-list list">
             <li>
-              <a href="./index.html" class="list-menu link">Studio</a>
+              <a href="./index.html" class="header-list-menu link">Studio</a>
             </li>
             <li>
-              <a href="./portfolio.html" class="list-menu link">Portfolio</a>
+              <a href="./portfolio.html" class="header-list-menu link">Portfolio</a>
             </li>
             <li>
-              <a href="" class="list-menu link">Contacts</a>
+              <a href="" class="header-list-menu link">Contacts</a>
             </li>
           </ul>
         </nav>
@@ -80,8 +80,8 @@
       <section class="section-one">
         <div class="container">
           <h2 class="title-section-one" hidden>Our benefits</h2>
-          <ul class="list">
-            <li>
+          <ul class="setion-one-list">
+            <li class="section-one-list-features">
               <h3
                 class="title-hthree"
                 style="
@@ -101,7 +101,7 @@
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="section-one-list-features">
               <h3
                 class="title-hthree"
                 style="
@@ -121,7 +121,7 @@
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="section-one-list-features">
               <h3
                 class="title-hthree"
                 style="
@@ -141,7 +141,7 @@
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="section-one-list-features">
               <h3
                 class="title-hthree"
                 style="
