--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
       <section class="section-one">
         <div class="container">
           <h2 class="title-section-one" hidden>Our benefits</h2>
-          <ul class="setion-one-list">
-            <li class="section-one-list-features">
+          <ul class="setion-list">
+            <li class="section-one-list">
               <h3
                 class="title-hthree"
                 style="
@@ -101,7 +101,7 @@
                 the perfect and creative solution.
               </p>
             </li>
-            <li class="section-one-list-features">
+            <li class="section-one-list">
               <h3
                 class="title-hthree"
                 style="
@@ -121,7 +121,7 @@
                 within the shortest possible time.
               </p>
             </li>
-            <li class="section-one-list-features">
+            <li class="section-one-list">
               <h3
                 class="title-hthree"
                 style="
@@ -141,7 +141,7 @@
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li class="section-one-list-features">
+            <li class="section-one-list">
               <h3
                 class="title-hthree"
                 style="
@@ -166,7 +166,7 @@
       </section>
 
       <!-- section 2  -->
-      <section>
+      <section class="section-two">
         <div class="container">
           <h2
             class="title-section"
@@ -178,15 +178,15 @@
             "
           >
             What are we doing
-          </h2>
-          <ul class="list">
-            <li>
+  
+          <ul class="section-list list">
+            <li class="section-two-list">
               <img src="./images/section-2/img1.jpg" alt="img 1" width="360" />
             </li>
-            <li>
+            <li class="section-two-list">
               <img src="./images/section-2/img2.jpg" alt="img 2" width="360" />
             </li>
-            <li>
+            <li class="section-two-list">
               <img src="./images/section-2/img3.jpg" alt="img 3" width="360" />
             </li>
           </ul>
@@ -197,7 +197,7 @@
       <section class="section-three">
         <div class="container">
           <h2 class="title-section">Our Team</h2>
-          <ul class="list">
+          <ul class="section-list list">
             <li class="list-section-three">
               <img
                 src="./images/section-3/img-1.jpg"
