--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
       <section class="section-one">
         <div class="container">
           <h2 class="title-section-one" hidden>Our benefits</h2>
-          <ul class="setion-list">
-            <li class="section-one-list">
+          <ul class="setion-one-list">
+            <li class="section-one-list-features">
               <h3
                 class="title-hthree"
                 style="
@@ -179,14 +179,14 @@
           >
             What are we doing
   
-          <ul class="section-list list">
-            <li class="section-two-list">
+          <ul class="section-two-list list">
+            <li class="section-two-list-work">
               <img src="./images/section-2/img1.jpg" alt="img 1" width="360" />
             </li>
-            <li class="section-two-list">
+            <li class="section-two-list-work">
               <img src="./images/section-2/img2.jpg" alt="img 2" width="360" />
             </li>
-            <li class="section-two-list">
+            <li class="section-two-list-work">
               <img src="./images/section-2/img3.jpg" alt="img 3" width="360" />
             </li>
           </ul>
