--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 the perfect and creative solution.
               </p>
             </li>
-            <li class="section-one-list">
+            <li class="section-one-list-features">
               <h3
                 class="title-hthree"
                 style="
@@ -121,7 +121,7 @@
                 within the shortest possible time.
               </p>
             </li>
-            <li class="section-one-list">
+            <li class="section-one-list-features">
               <h3
                 class="title-hthree"
                 style="
@@ -141,7 +141,7 @@
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li class="section-one-list">
+            <li class="section-one-list-features">
               <h3
                 class="title-hthree"
                 style="
