--- a/index.html
+++ b/index.html
@@ -197,42 +197,42 @@
       <section class="section-three">
         <div class="container">
           <h2 class="title-section">Our Team</h2>
-          <ul class="section-list list">
-            <li class="list-section-three">
+          <ul class="section-three-list list">
+            <li class="section-three-list-team">
               <img
                 src="./images/section-3/img-1.jpg"
                 alt="Product Designer"
                 width="264"
               />
-              <h3 class="title-hthree">Mark Guerrero</h3>
-              <p class="paragraph-hthree">Product Designer</p>
+              <div class="section-three-div"><h3 class="title-hthree">Mark Guerrero</h3>
+              <p class="paragraph-hthree">Product Designer</p></div>
             </li>
-            <li class="list-section-three">
+            <li class="section-three-list-team">
               <img
                 src="./images/section-3/img-2.jpg"
                 alt="Frontend Developer"
                 width="264"
               />
-              <h3 class="title-hthree">Tom Ford</h3>
-              <p class="paragraph-hthree">Frontend Developer</p>
+             <div class="section-three-div"> <h3 class="title-hthree">Tom Ford</h3>
+              <p class="paragraph-hthree">Frontend Developer</p></div>
             </li>
-            <li class="list-section-three">
+            <li class="section-three-list-team">
               <img
                 src="./images/section-3/img-3.jpg"
                 alt="Marketing"
                 width="264"
               />
-              <h3 class="title-hthree">Camila Garcia</h3>
-              <p class="paragraph-hthree">Marketing</p>
+              <div class="section-three-div"><h3 class="title-hthree">Camila Garcia</h3>
+              <p class="paragraph-hthree">Marketing</p></div>
             </li>
-            <li class="list-section-three">
+            <li class="section-three-list-team">
               <img
                 src="./images/section-3/img-4.jpg"
                 alt="UI Designer"
                 width="264"
               />
-              <h3 class="title-hthree">Daniel Wilson</h3>
-              <p class="paragraph-hthree">UI Designer</p>
+             <div class="section-three-div"> <h3 class="title-hthree">Daniel Wilson</h3>
+              <p class="paragraph-hthree">UI Designer</p></div>
             </li>
           </ul>
         </div>
