--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="header-div container">
         <nav class="header-nav">
           <!-- Logo -->
-          <a href="./index.html" class="logo link"
+          <a href="./index.html" class="header-logo link"
             >Web <span class="header-span-logo">Studio</span></a
           >
 
@@ -241,14 +241,14 @@
 
     <!-- Footer srction     -->
     <footer class="footer" style="background-color: #2e2f42">
-      <a href="./index.html" class="logo link"
+      <div class="container"><a href="./index.html" class="footer-logo link"
         >Web
         <span class="footer-span-logo" style="color: #f4f4fd">Studio</span></a
       >
-      <p>
+      <p class="footer-paragraph">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
-      </p>
+      </p></div>
     </footer>
   </body>
 </html>
