--- a/portfolio.html
+++ b/portfolio.html
@@ -15,39 +15,41 @@
   </head>
   <body class="body">
     <!-- Header section      -->
-    <header>
-      <nav class="header-nav list">
-        <!-- Logo -->
-        <a href="./index.html" class="logo link"
-          >Web <span class="header-span-logo">Studio</span></a
-        >
-        <!--Menu Nav -->
-        <ul class="header-nav-list list">
-          <li>
-            <a href="./index.html" class="list-menu link">Studio</a>
-          </li>
-          <li>
-            <a href="./portfolio.html" class="list-menu link">Portfolio</a>
-          </li>
-          <li>
-            <a href="" class="list-menu link">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="address" style="font-style: normal">
-        <ul class="list">
-          <li>
-            <a href="mailto:info@devstudio.com" class="info link"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="info link"
-              >+11 (000) 111-11-11
-            </a>
-          </li>
-        </ul>
-      </address>
+    <header class="header">
+      <div class="header-div">
+        <nav class="header-nav list">
+          <!-- Logo -->
+          <a href="./index.html" class="logo link"
+            >Web <span class="header-span-logo">Studio</span></a
+          >
+          <!--Menu Nav -->
+          <ul class="header-nav-list list">
+            <li>
+              <a href="./index.html" class="list-menu link">Studio</a>
+            </li>
+            <li>
+              <a href="./portfolio.html" class="list-menu link">Portfolio</a>
+            </li>
+            <li>
+              <a href="" class="list-menu link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="address" style="font-style: normal">
+          <ul class="list">
+            <li>
+              <a href="mailto:info@devstudio.com" class="info link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+110001111111" class="info link"
+                >+11 (000) 111-11-11
+              </a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <!-- Main  -->
