--- a/portfolio.html
+++ b/portfolio.html
@@ -16,27 +16,27 @@
   <body class="body">
     <!-- Header section      -->
     <header class="header">
-      <div class="header-div">
+      <div class="header-div container">
         <nav class="header-nav list">
           <!-- Logo -->
-          <a href="./index.html" class="logo link"
+          <a href="./index.html" class="header-logo link"
             >Web <span class="header-span-logo">Studio</span></a
           >
           <!--Menu Nav -->
           <ul class="header-nav-list list">
             <li>
-              <a href="./index.html" class="list-menu link">Studio</a>
+              <a href="./index.html" class="header-list-menu link">Studio</a>
             </li>
             <li>
-              <a href="./portfolio.html" class="list-menu link">Portfolio</a>
+              <a href="./portfolio.html" class="header-list-menu link">Portfolio</a>
             </li>
             <li>
-              <a href="" class="list-menu link">Contacts</a>
+              <a href="" class="header-list-menu link">Contacts</a>
             </li>
           </ul>
         </nav>
         <address class="address" style="font-style: normal">
-          <ul class="list">
+          <ul class="list-contacts">
             <li>
               <a href="mailto:info@devstudio.com" class="info link"
                 >info@devstudio.com</a
