--- a/portfolio.html
+++ b/portfolio.html
@@ -54,16 +54,17 @@
 
     <!-- Main  -->
     <main>
-      <section class="list">
-        <h1 hidden style="list-style: none">Portfolio</h1>
+      <section class="pfl-list">
+        <div class="pfl-main-div container">
+          <h1 hidden style="list-style: none">Portfolio</h1>
         <!-- Buttons -->
 
-        <ul class="list">
-          <li><button type="button" class="main-button">All</button></li>
-          <li><button type="button" class="main-button">Web Site</button></li>
-          <li><button type="button" class="main-button">App</button></li>
-          <li><button type="button" class="main-button">Design</button></li>
-          <li><button type="button" class="main-button">Marketing</button></li>
+        <ul class="pfl-buttons list">
+          <li><button type="button" class="pfl-main-button">All</button></li>
+          <li><button type="button" class="pfl-main-button">Web Site</button></li>
+          <li><button type="button" class="pfl-main-button">App</button></li>
+          <li><button type="button" class="pfl-main-button">Design</button></li>
+          <li><button type="button" class="pfl-main-button">Marketing</button></li>
         </ul>
 
         <!-- Row 1  -->
@@ -175,6 +176,7 @@
             >
           </li>
         </ul>
+        </div>
       </section>
     </main>
 
