--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,9 @@
               <a href="./index.html" class="header-list-menu link">Studio</a>
             </li>
             <li>
-              <a href="./portfolio.html" class="header-list-menu link">Portfolio</a>
+              <a href="./portfolio.html" class="header-list-menu link"
+                >Portfolio</a
+              >
             </li>
             <li>
               <a href="" class="header-list-menu link">Contacts</a>
@@ -54,128 +56,152 @@
 
     <!-- Main  -->
     <main>
-      <section class="pfl-list">
+      <section class="pfl-main-section">
         <div class="pfl-main-div container">
           <h1 hidden style="list-style: none">Portfolio</h1>
-        <!-- Buttons -->
+          <!-- Buttons -->
 
-        <ul class="pfl-buttons list">
-          <li><button type="button" class="pfl-main-button">All</button></li>
-          <li><button type="button" class="pfl-main-button">Web Site</button></li>
-          <li><button type="button" class="pfl-main-button">App</button></li>
-          <li><button type="button" class="pfl-main-button">Design</button></li>
-          <li><button type="button" class="pfl-main-button">Marketing</button></li>
-        </ul>
+          <ul class="pfl-buttons list">
+            <li><button type="button" class="pfl-main-button">All</button></li>
+            <li>
+              <button type="button" class="pfl-main-button">Web Site</button>
+            </li>
+            <li><button type="button" class="pfl-main-button">App</button></li>
+            <li>
+              <button type="button" class="pfl-main-button">Design</button>
+            </li>
+            <li>
+              <button type="button" class="pfl-main-button">Marketing</button>
+            </li>
+          </ul>
 
-        <!-- Row 1  -->
+          <!-- Row 1  -->
 
-        <ul class="list">
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images/Portfolio/img_1.jpg"
-                alt="Banking App Interface Concept"
-                width="360"
-              />
-              <h2 class="title-htwo">Banking App Interface Concept</h2>
-              <p class="text">App</p>
-            </a>
-          </li>
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images/Portfolio/img_2.jpg"
-                alt="Cashless Payment"
-                width="360"
-              />
-              <h2 class="title-htwo">Cashless Payment</h2>
-              <p class="text">Marketing</p>
-            </a>
-          </li>
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images/Portfolio/img_3.jpg"
-                alt="Meditation App"
-                width="360"
-              />
-              <h2 class="title-htwo">Meditation App</h2>
-              <p class="text">App</p></a
-            >
-          </li>
+          <ul class="pfl-row-list list">
+            <li>
+              <a class="link" href="">
+                <img
+                  src="./images/Portfolio/img_1.jpg"
+                  alt="Banking App Interface Concept"
+                  width="360"
+                />
+                <div class="pfl-main-div">
+                  <h2 class="title-htwo">Banking App Interface Concept</h2>
+                  <p class="text">App</p>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a class="link" href="">
+                <img
+                  src="./images/Portfolio/img_2.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                />
+                <div class="pfl-main-div">
+                  <h2 class="title-htwo">Cashless Payment</h2>
+                  <p class="text">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a class="link" href="">
+                <img
+                  src="./images/Portfolio/img_3.jpg"
+                  alt="Meditation App"
+                  width="360"
+                />
+                <div class="pfl-main-div">
+                  <h2 class="title-htwo">Meditation App</h2>
+                  <p class="text">App</p>
+                </div>
+              </a>
+            </li>
 
-          <!-- Row 2  -->
+            <!-- Row 2  -->
 
-          <li>
-            <a class="link" href=""
-              ><img
-                src="./images/Portfolio/img_4.jpg"
-                alt="Taxi Service"
-                width="360"
-              />
-              <h2 class="title-htwo">Taxi Service</h2>
-              <p class="text">Marketing</p>
-            </a>
-          </li>
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images/Portfolio/img_5.jpg"
-                alt="Screen Illustrations"
-                width="360"
-              />
-              <h2 class="title-htwo">Screen Illustrations</h2>
-              <p class="text">Design</p>
-            </a>
-          </li>
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images/Portfolio/img_6.jpg"
-                alt="Online Courses"
-                width="360"
-              />
-              <h2 class="title-htwo">Online Courses</h2>
-              <p class="text">Marketing</p>
-            </a>
-          </li>
+            <li>
+              <a class="link" href=""
+                ><img
+                  src="./images/Portfolio/img_4.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                />
+                <div class="pfl-main-div">
+                  <h2 class="title-htwo">Taxi Service</h2>
+                  <p class="text">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a class="link" href="">
+                <img
+                  src="./images/Portfolio/img_5.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                />
+                <div class="pfl-main-div">
+                  <h2 class="title-htwo">Screen Illustrations</h2>
+                  <p class="text">Design</p>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a class="link" href="">
+                <img
+                  src="./images/Portfolio/img_6.jpg"
+                  alt="Online Courses"
+                  width="360"
+                />
+                <div class="pfl-main-div">
+                  <h2 class="title-htwo">Online Courses</h2>
+                  <p class="text">Marketing</p>
+                </div>
+              </a>
+            </li>
 
-          <!-- Row 3  -->
+            <!-- Row 3  -->
 
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images/Portfolio/img_7.jpg"
-                alt="Instagram Stories Concept"
-                width="360"
-              />
-              <h2 class="title-htwo">Instagram Stories Concept</h2>
-              <p class="text">Design</p></a
-            >
-          </li>
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images/Portfolio/img_8.jpg"
-                alt="Organic Food"
-                width="360"
-              />
-              <h2 class="title-htwo">Organic Food</h2>
-              <p class="text">Web Site</p>
-            </a>
-          </li>
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images/Portfolio/img_9.jpg"
-                alt="Fresh Coffee"
-                width="360"
-              />
-              <h2 class="title-htwo">Fresh Coffee</h2>
-              <p class="text">Web Site</p></a
-            >
-          </li>
-        </ul>
+            <li>
+              <a class="link" href="">
+                <img
+                  src="./images/Portfolio/img_7.jpg"
+                  alt="Instagram Stories Concept"
+                  width="360"
+                />
+                <div class="pfl-main-div">
+                  <h2 class="title-htwo">Instagram Stories Concept</h2>
+                  <p class="text">Design</p>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a class="link" href="">
+                <img
+                  src="./images/Portfolio/img_8.jpg"
+                  alt="Organic Food"
+                  width="360"
+                />
+                <div class="pfl-main-div">
+                  <h2 class="title-htwo">Organic Food</h2>
+                  <p class="text">Web Site</p>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a class="link" href="">
+                <img
+                  src="./images/Portfolio/img_9.jpg"
+                  alt="Fresh Coffee"
+                  width="360"
+                />
+                <div class="pfl-main-div">
+                  <h2 class="title-htwo">Fresh Coffee</h2>
+                  <p class="text">Web Site</p>
+                </div>
+              </a>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
