--- a/portfolio.html
+++ b/portfolio.html
@@ -78,7 +78,7 @@
           <!-- Row 1  -->
 
           <ul class="pfl-row-list list">
-            <li>
+            <li class="pfl-list">
               <a class="link" href="">
                 <img
                   src="./images/Portfolio/img_1.jpg"
@@ -91,7 +91,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="pfl-list">
               <a class="link" href="">
                 <img
                   src="./images/Portfolio/img_2.jpg"
@@ -104,7 +104,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="pfl-list">
               <a class="link" href="">
                 <img
                   src="./images/Portfolio/img_3.jpg"
@@ -120,7 +120,7 @@
 
             <!-- Row 2  -->
 
-            <li>
+            <li class="pfl-list">
               <a class="link" href=""
                 ><img
                   src="./images/Portfolio/img_4.jpg"
@@ -133,7 +133,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="pfl-list">
               <a class="link" href="">
                 <img
                   src="./images/Portfolio/img_5.jpg"
@@ -146,7 +146,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="pfl-list">
               <a class="link" href="">
                 <img
                   src="./images/Portfolio/img_6.jpg"
@@ -162,7 +162,7 @@
 
             <!-- Row 3  -->
 
-            <li>
+            <li class="pfl-list">
               <a class="link" href="">
                 <img
                   src="./images/Portfolio/img_7.jpg"
@@ -175,7 +175,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="pfl-list">
               <a class="link" href="">
                 <img
                   src="./images/Portfolio/img_8.jpg"
@@ -188,7 +188,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="pfl-list">
               <a class="link" href="">
                 <img
                   src="./images/Portfolio/img_9.jpg"
