--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
               text-transform: capitalize;
             "
           >
-            What are we doing
+            What are we doing </h2>
   
           <ul class="section-two-list list">
             <li class="section-two-list-work">
