--- a/portfolio.html
+++ b/portfolio.html
@@ -78,8 +78,8 @@
 
           <!-- Row 1  -->
 
-          <ul class="pfl-list card-set list">
-            <li class="pfl-row-list card-set-item">
+          <ul class="pfl-list list">
+            <li class="pfl-row-list">
               <a class="link" href="">
                 <img
                   src="./images/Portfolio/img_1.jpg"
