--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <!-- section 1  -->
       <section class="section-one">
         <div class="container">
-          <h2 hidden class="title-section-one" >Our benefits</h2>
+          <h2 class="title-section-one visually-hidden " >Our benefits</h2>
           <ul class="setion-one-list">
             <li class="section-one-list-features">
               <h3
