--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
     <!-- Main  -->
     <main>
       <section class="pfl-main-section">
-        <div class="pfl-main-div container">
+        <div class="container">
           <h1 hidden style="list-style: none">Portfolio</h1>
           <!-- Buttons -->
 
