--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
           </ul>
         </nav>
         <address class="address" style="font-style: normal">
-          <ul class="list-contacts">
+          <ul class="list-contacts list">
             <li>
               <a href="mailto:info@devstudio.com" class="info link"
                 >info@devstudio.com</a
@@ -206,16 +206,16 @@
         </div>
       </section>
     </main>
-
     <!-- Footer srction     -->
-    <footer class="footer">
-      <a href="./index.html" class="logo link"
-        >Web <span class="footer-span-logo">Studio</span></a
+    <footer class="footer" style="background-color: #2e2f42">
+      <div class="container"><a href="./index.html" class="footer-logo link"
+        >Web
+        <span class="footer-span-logo" style="color: #f4f4fd">Studio</span></a
       >
-      <p>
+      <p class="footer-paragraph">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
-      </p>
+      </p></div>
     </footer>
   </body>
 </html>
