--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <section class="section-one">
         <div class="container">
           <h2 class="title-section-one visually-hidden " >Our benefits</h2>
-          <ul class="setion-one-list">
+          <ul class="setion-one-list list">
             <li class="section-one-list-features">
               <h3
                 class="title-hthree"
