--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,7 @@
     <main>
       <section class="pfl-main-section">
         <div class="container">
-          <h1 hidden style="list-style: none">Portfolio</h1>
+          <h1 hidden class="visually-hidden" style="list-style: none">Portfolio</h1>
           <!-- Buttons -->
 
           <ul class="pfl-buttons list">
