--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                 alt="Product Designer"
                 width="264"
               />
-              <div class="section-three-div"><h3 class="title-hthree">Mark Guerrero</h3>
+              <div class="section-three-div"><h3 class="title-team">Mark Guerrero</h3>
               <p class="paragraph-hthree">Product Designer</p></div>
             </li>
             <li class="section-three-list-team">
@@ -215,7 +215,7 @@
                 alt="Frontend Developer"
                 width="264"
               />
-             <div class="section-three-div"> <h3 class="title-hthree">Tom Ford</h3>
+             <div class="section-three-div"> <h3 class="title-team">Tom Ford</h3>
               <p class="paragraph-hthree">Frontend Developer</p></div>
             </li>
             <li class="section-three-list-team">
@@ -224,7 +224,7 @@
                 alt="Marketing"
                 width="264"
               />
-              <div class="section-three-div"><h3 class="title-hthree">Camila Garcia</h3>
+              <div class="section-three-div"><h3 class="title-team">Camila Garcia</h3>
               <p class="paragraph-hthree">Marketing</p></div>
             </li>
             <li class="section-three-list-team">
@@ -233,7 +233,7 @@
                 alt="UI Designer"
                 width="264"
               />
-             <div class="section-three-div"> <h3 class="title-hthree">Daniel Wilson</h3>
+             <div class="section-three-div"> <h3 class="title-team">Daniel Wilson</h3>
               <p class="paragraph-hthree">UI Designer</p></div>
             </li>
           </ul>
