--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/modern-normalize.min.css">
+    <link rel="stylesheet" href="./css/modern-normalize.min.css" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body class="body">
@@ -38,7 +38,7 @@
             </li>
           </ul>
         </nav>
-        <address class="address" style="font-style: normal">
+        <address class="address">
           <ul class="list-contacts list">
             <li>
               <a href="mailto:info@devstudio.com" class="info link"
@@ -59,7 +59,7 @@
     <main>
       <section class="pfl-main-section">
         <div class="container">
-          <h1 hidden class="visually-hidden" style="list-style: none">Portfolio</h1>
+          <h1 hidden class="visually-hidden">Portfolio</h1>
           <!-- Buttons -->
 
           <ul class="pfl-buttons list">
@@ -207,15 +207,16 @@
       </section>
     </main>
     <!-- Footer srction     -->
-    <footer class="footer" style="background-color: #2e2f42">
-      <div class="container"><a href="./index.html" class="footer-logo link"
-        >Web
-        <span class="footer-span-logo" style="color: #f4f4fd">Studio</span></a
-      >
-      <p class="footer-paragraph">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p></div>
+    <footer class="footer">
+      <div class="container">
+        <a href="./index.html" class="footer-logo link"
+          >Web <span class="footer-span-logo">Studio</span></a
+        >
+        <p class="footer-paragraph">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
