--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </ul>
         </nav>
 
-        <address class="address" style="font-style: normal">
+        <address class="address">
           <ul class="list-contacts list">
             <li>
               <a href="mailto:info@devstudio.com" class="info link"
@@ -109,17 +109,7 @@
       <!-- section 2  -->
       <section class="section-two">
         <div class="container">
-          <h2
-            class="title-section"
-            style="
-              font-size: 36px;
-              line-height: 1.11;
-              text-align: center;
-              text-transform: capitalize;
-            "
-          >
-            What are we doing
-          </h2>
+          <h2 class="title-section">What are we doing</h2>
 
           <ul class="section-two-list list">
             <li class="section-two-list-work">
@@ -190,11 +180,10 @@
     </main>
 
     <!-- Footer srction     -->
-    <footer class="footer" style="background-color: #2e2f42">
+    <footer class="footer">
       <div class="container">
         <a href="./index.html" class="footer-logo link"
-          >Web
-          <span class="footer-span-logo" style="color: #f4f4fd">Studio</span></a
+          >Web <span class="footer-span-logo">Studio</span></a
         >
         <p class="footer-paragraph">
           Increase the flow of customers and sales for your business with
