--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
       <section class="hero-section">
         <div class="container">
-          <h1 class="title-hero margin">Effective Solutions for Your Business</h1>
+          <h1 class="title-hero ">Effective Solutions for Your Business</h1>
           <button type="button" class="button">Order Service</button>
         </div>
       </section>
